config/k8s/admin-kotlin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-kotlin
spec:
  selector:
    app: admin-kotlin
  ports:
    - protocol: TCP
      name: admin-kotlin
      port: 5004
      targetPort: 5004

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-kotlin
  labels:
    app: admin-kotlin
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      app: admin-kotlin
  template:
    metadata:
      labels:
        app: admin-kotlin
    spec:
      containers:
        - name: admin-kotlin
          image: borntonight/admin-kotlin:1
          ports:
            - containerPort: 5004
