config/k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka
  selector:
    app: kafka

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.0.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "150m"
