config/k8s/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      name: kibana
      port: 5601
      targetPort: 5601

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:8.15.0
          ports:
            - containerPort: 5601
          resources:
            requests:
              memory: "450Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "250m"
