config/k8s/logstash.yaml

apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: logstash

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: logstash:8.15.0
          securityContext:
            readOnlyRootFilesystem: false
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5000
              name: logstash
            - containerPort: 5044
            - containerPort: 9600
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "150m"
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf

      volumes:
        - name: pipeline
          configMap:
            name: logstash-config
            items:
              - key: logstash.conf
                path: logstash.conf
