config/k8s/main-kotlin.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-kotlin
spec:
  selector:
    app: main-kotlin
  ports:
    - protocol: TCP
      name: main-kotlin
      port: 5001
      targetPort: 5001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-kotlin
  labels:
    app: main-kotlin
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: main-kotlin
  template:
    metadata:
      labels:
        app: main-kotlin
    spec:
      containers:
        - name: main-kotlin
          image: borntonight/main-kotlin:1
          ports:
            - containerPort: 5001
