config/k8s/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
    tier: database

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
    tier: database
spec:
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
        tier: database
    spec:
      containers:
        - name: postgresql
          image: postgres:16
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgresql
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "150m"
          volumeMounts:
            - name: postgresql-claim0
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-claim0
          persistentVolumeClaim:
            claimName: postgresql-claim0
