config/k8s/reader-kotlin.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-kotlin
spec:
  selector:
    app: reader-kotlin
  ports:
    - protocol: TCP
      name: reader-kotlin
      port: 5002
      targetPort: 5002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-kotlin
  labels:
    app: reader-kotlin
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: reader-kotlin
  template:
    metadata:
      labels:
        app: reader-kotlin
    spec:
      containers:
        - name: reader-kotlin
          image: borntonight/reader-kotlin:1
#          ports:
#            - containerPort: 5002
