config/k8s/redis.yaml

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
  clusterIP: None # headless service - не балансирует трафик, а дает прямые DNS имена подам
  selector:
    app: redis

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 10
      initContainers: # Выполняется перед основным контейнером
        - name: init-redis
          image: redis:7.4-rc
          command:
            - bash
            - "-c"
            - |
              [...]
          volumeMounts:
            - name: redis-config-volume # Монтируем emptyDir для конфигов
              mountPath: /redis/conf/
            - name: redis-configmap-volume # Монтируем ConfigMap с конфигами
              mountPath: /mnt/redis-configmap
      # Основной контейнер с Redis сервером
      containers:
        - name: redis-container
          image: redis:7.4-rc
          command: ["redis-server"]
          args: ["/redis/conf/redis.conf"]
          volumeMounts:
            - name: redis-config-volume # Монтируем конфиг, подготовленный init-контейнером
              mountPath: /redis/conf/
            - name: redis-pvc  # Монтируем PersistentVolume для данных
              mountPath: /redis/data
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
      # Общие volumes, доступные всем контейнерам в поде
      volumes:
        - name: redis-configmap-volume # Volume из ConfigMap с шаблонами конфигов
          configMap:
            name: redis-role-config
        - name: redis-config-volume # EmptyDir для временной конфигурации (живет, пока жив под)
          emptyDir: {}

  # Шаблон для создания PersistentVolume для каждого пода
  # Каждый под получит свой PVC с именем redis-pvc-<pod-name>
  volumeClaimTemplates:
    - metadata:
        name: redis-pvc
      spec:
        accessModes: [ "ReadWriteOnce" ] # Только один под может писать одновременно
        resources:
          requests:
            storage: 100Mi # Запрашиваем 100Mi дискового пространства
