config/k8s/writer-kotlin.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer-kotlin
spec:
  selector:
    app: writer-kotlin
  ports:
    - protocol: TCP
      name: writer-kotlin
      port: 5003
      targetPort: 5003

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-kotlin
  labels:
    app: writer-kotlin
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: writer-kotlin
  template:
    metadata:
      labels:
        app: writer-kotlin
    spec:
      containers:
        - name: writer-kotlin
          image: borntonight/writer-kotlin:1
          ports:
            - containerPort: 5003
